Fixed alignment of icons in detailed view in GameBuilder.

--- a/ludus.scss
+++ b/ludus.scss
@@ -512,6 +512,16 @@ table {
   /* Styles for special content types */
   .warn { color: $red; }
   .nudge { color: $sky; }
+  .attr-group {
+    display: block;
+    float: left;
+    margin-top: -0.15em;
+  }
+  .placeholder-info {
+    display: block;
+    float:left;
+    margin-left: 0.2em;
+  }
 
   .no-list > li {
     padding-bottom: 0em;
